Tweak framework logo padding

--- a/src/components/BrandLogo.astro
+++ b/src/components/BrandLogo.astro
@@ -104,16 +104,16 @@ const logos: Record<Props['brand'], { file: string; padding: string }> = {
 	wordpress: { file: 'wordpress.svg', padding: '.2em' },
 	kinsta: { file: 'kinsta.svg', padding: '0' },
 	gatsby: { file: 'gatsby.svg', padding: '0' },
-	nextjs: { file: 'nextjs.svg', padding: '0 .125em' },
-	jekyll: { file: 'jekyll.svg', padding: '0 .125em' },
-	hugo: { file: 'hugo.svg', padding: '0 .125em' },
-	eleventy: { file: 'eleventy.svg', padding: '0 .125em' },
-	gridsome: { file: 'gridsome.svg', padding: '0 .125em' },
-	pelican: { file: 'pelican.svg', padding: '0 .125em' },
-	sveltekit: { file: 'sveltekit.svg', padding: '0 .125em' },
-	vuepress: { file: 'vuepress.svg', padding: '0 .125em' },
-	docusaurus: { file: 'docusaurus.svg', padding: '0 .125em' },
-	nuxtjs: { file: 'nuxtjs.svg', padding: '0 .125em' },
+	nextjs: { file: 'nextjs.svg', padding: '.125em' },
+	jekyll: { file: 'jekyll.svg', padding: '0 .1em 0 .05em' },
+	hugo: { file: 'hugo.svg', padding: '.125em' },
+	eleventy: { file: 'eleventy.svg', padding: '.075em .05em .05em' },
+	gridsome: { file: 'gridsome.svg', padding: '.15em' },
+	pelican: { file: 'pelican.svg', padding: '.25em .225em .25em .25em' },
+	sveltekit: { file: 'sveltekit.svg', padding: '.2em' },
+	vuepress: { file: 'vuepress.svg', padding: '.2em .175em .175em' },
+	docusaurus: { file: 'docusaurus.svg', padding: '.225em' },
+	nuxtjs: { file: 'nuxtjs.svg', padding: '.25em' },
 };
 
 const { brand, size = '4rem', shape = 'circle' } = Astro.props as Props;
