rename all stubs to mdx, update nav component glob

--- a/src/components/MigrationGuidesNav.astro
+++ b/src/components/MigrationGuidesNav.astro
@@ -10,7 +10,7 @@ interface Frontmatter {
 
 const lang = getLanguageFromURL(Astro.url.pathname);
 
-const pages = await Astro.glob<Frontmatter>('../pages/en/guides/migrate-to-astro/*.md');
+const pages = await Astro.glob<Frontmatter>('../pages/en/guides/migrate-to-astro/*.mdx');
 
 /** Array of frameworks we have good content for and want to show first in the list. */
 const showFirst: string[] = [];
