--- a/src/components/BrandLogo.astro
+++ b/src/components/BrandLogo.astro
@@ -105,13 +105,13 @@ const logos: Record<Props['brand'], { file: string; padding: string }> = {
 	kinsta: { file: 'kinsta.svg', padding: '0' },
 	gatsby: { file: 'gatsby.svg', padding: '0' },
 	nextjs: { file: 'nextjs.svg', padding: '.125em' },
-	jekyll: { file: 'jekyll.svg', padding: '0 .1em 0 .05em' },
+	jekyll: { file: 'jekyll.png', padding: '.1em .05em 0' },
 	hugo: { file: 'hugo.svg', padding: '.125em' },
 	eleventy: { file: 'eleventy.svg', padding: '.075em .05em .05em' },
 	gridsome: { file: 'gridsome.svg', padding: '.15em' },
 	pelican: { file: 'pelican.svg', padding: '.25em .225em .25em .25em' },
-	sveltekit: { file: 'sveltekit.svg', padding: '.2em' },
-	vuepress: { file: 'vuepress.svg', padding: '.2em .175em .175em' },
+	sveltekit: { file: 'sveltekit.svg', padding: '.1875em' },
+	vuepress: { file: 'vuepress.png', padding: '.2em .175em .175em' },
 	docusaurus: { file: 'docusaurus.svg', padding: '.225em' },
 	nuxtjs: { file: 'nuxtjs.svg', padding: '.25em' },
 };
