Update TabGroup as well

--- a/src/components/TabGroup/InstallGuideTabGroup.astro
+++ b/src/components/TabGroup/InstallGuideTabGroup.astro
@@ -8,7 +8,7 @@ const lang = getLanguageFromURL(currentPage);
 const segments = currentPage.split('/');
 ---
 
-<div class="TabGroup no-flex pull-wide">
+<div class="TabGroup no-flex">
 	<a href={`/${lang}/install/auto/`} class={segments.includes('auto') ? 'active' : ''}>
 		<UIString key="install.autoTab" />
 	</a>
