--- a/src/components/BrandLogo.astro
+++ b/src/components/BrandLogo.astro
@@ -56,7 +56,8 @@ export interface Props {
 		| 'sveltekit'
 		| 'vuepress'
 		| 'docusaurus'
-		| 'nuxtjs';
+		| 'nuxtjs'
+		| 'keystonejs';
 }
 
 const logos: Record<Props['brand'], { file: string; padding: string }> = {
@@ -114,6 +115,7 @@ const logos: Record<Props['brand'], { file: string; padding: string }> = {
 	vuepress: { file: 'vuepress.png', padding: '.2em .175em .175em' },
 	docusaurus: { file: 'docusaurus.svg', padding: '.225em' },
 	nuxtjs: { file: 'nuxtjs.svg', padding: '.25em' },
+	keystonejs: { file: 'keystonejs.svg', padding: '.25em' },
 };
 
 const { brand, size = '4rem', shape = 'circle' } = Astro.props as Props;
