Fix dynamic redirect route I borked in the MDX migration

--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -3,7 +3,7 @@ import type { MarkdownInstance } from 'astro';
 
 export async function getStaticPaths() {
 	// get english pages that moved from `/` to `/en/`
-	const englishPages = await Astro.glob<MarkdownInstance<{}>>('./en/**.{md,mdx}');
+	const englishPages = await Astro.glob<MarkdownInstance<{}>>('./en/**/*.{md,mdx}');
 
 	return englishPages.map((page) => ({
 		params: {
