Added https://spinalcms.com/ as a CMS option

--- a/src/components/BrandLogo.astro
+++ b/src/components/BrandLogo.astro
@@ -44,6 +44,7 @@ export interface Props {
 		| 'prismic'
 		| 'sanity'
 		| 'storyblok'
+		| 'spinal'
 		| 'wordpress'
 		| 'kinsta'
 		| 'gatsby'
@@ -102,6 +103,7 @@ const logos: Record<Props['brand'], { file: string; padding: string }> = {
 	prismic: { file: 'prismic.svg', padding: '.25em' },
 	sanity: { file: 'sanity.svg', padding: '0 .1em' },
 	storyblok: { file: 'storyblok.svg', padding: '.3em .25em .25em' },
+	spinal: { file: 'spinal.svg', padding: '.15em .15em' },
 	wordpress: { file: 'wordpress.svg', padding: '.2em' },
 	kinsta: { file: 'kinsta.svg', padding: '0' },
 	gatsby: { file: 'gatsby.svg', padding: '0' },
