Fix astro check errors

--- a/src/components/tabs/TabbedContent.astro
+++ b/src/components/tabs/TabbedContent.astro
@@ -65,7 +65,7 @@ const { tabs } = Astro.props as Props;
 				tab.setAttribute('role', 'tab');
 				tab.setAttribute('id', this.id + 'tab' + this.count++);
 				tab.setAttribute('tabindex', '-1');
-				tab.parentNode.setAttribute('role', 'presentation');
+				(tab.parentNode as HTMLElement)?.setAttribute('role', 'presentation');
 				if (!this.TabStore[i]) this.TabStore.push(new Set());
 				this.TabStore[i].add(tab);
 				if ('initial' in tab.dataset && tab.dataset.initial !== 'false') initialTab = i;
@@ -73,7 +73,7 @@ const { tabs } = Astro.props as Props;
 				// Handle clicking of tabs for mouse users
 				tab.addEventListener('click', (e) => {
 					e.preventDefault();
-					const currentTab: HTMLElement = tablist.querySelector('[aria-selected]');
+					const currentTab = tablist.querySelector('[aria-selected]');
 					if (e.currentTarget !== currentTab) {
 						this.switchTab(e.currentTarget as HTMLElement, i);
 					}
