--- a/src/components/Aside.astro
+++ b/src/components/Aside.astro
@@ -33,8 +33,8 @@ const { viewBox, d } = icons[type];
 <aside class={`content ${type}`} aria-label={title}>
 	<p class="title" aria-hidden="true">
 		<span class="icon">
-			<svg xmlns="http://www.w3.org/2000/svg" {viewBox} width={16} height={16}>
-				<path fill-rule="evenodd" {d}></path>
+			<svg xmlns="http://www.w3.org/2000/svg" viewBox={viewBox} width={16} height={16}>
+				<path fill-rule="evenodd" d={d}></path>
 			</svg>
 		</span>
 		{title}
