--- a/src/components/ContributorList.astro
+++ b/src/components/ContributorList.astro
@@ -9,10 +9,10 @@ export interface Props {
 const { githubRepo = 'withastro/docs' } = Astro.props as Props;
 const contributorsLink = `https://github.com/${githubRepo}/graphs/contributors`;
 
-const printError = (e) =>
+const printError = (e: Error) =>
 	console.warn(`[error]  /src/components/ContributorList.astro\n         ${e?.message ?? e}`);
 
-async function getContributors(repo, page = 1) {
+async function getContributors(repo: string, page = 1): Promise<{ login: string; id: number }[]> {
 	try {
 		const pageSize = 100;
 		const url = `https://api.github.com/repos/${repo}/contributors?per_page=${pageSize}&page=${page}`;
@@ -47,7 +47,7 @@ async function getContributors(repo, page = 1) {
 		}
 
 		return data;
-	} catch (e) {
+	} catch (e: any) {
 		printError(e);
 		return new Array();
 	}
