--- a/src/components/DeployGuidesNav.astro
+++ b/src/components/DeployGuidesNav.astro
@@ -42,7 +42,7 @@ const services: Service[] = [
 ---
 
 <CardsNav
-	{minimal}
+	minimal={minimal}
 	class="deploy-guides-nav"
 	links={services.map(({ title, slug, supports }) => ({
 		title,
