--- a/src/components/IntegrationsNav.astro
+++ b/src/components/IntegrationsNav.astro
@@ -16,7 +16,7 @@ function categoryLinksFromPages(pages: MarkdownInstance<Frontmatter>[], category
 		.filter((page) => page.frontmatter.category === category)
 		.map((page) => {
 			const [scope, name] = page.frontmatter.title.split(' ').shift()!.split('/');
-			const pageUrl = page.url.replace('/en/', `/${lang}/`) + '/';
+			const pageUrl = page.url!.replace('/en/', `/${lang}/`) + '/';
 			return {
 				title:
 					'<span class="scope">' +
