--- a/src/components/LeftSidebar/LeftSidebar.astro
+++ b/src/components/LeftSidebar/LeftSidebar.astro
@@ -60,13 +60,13 @@ if (isReference) {
 			type={'learn'}
 			defaultActiveTab={activeTab}
 			sidebarSections={learnSections}
-			{currentPageMatch}
+			currentPageMatch={currentPageMatch}
 		/>
 		<SidebarContent
 			type={'api'}
 			defaultActiveTab={activeTab}
 			sidebarSections={apiSections}
-			{currentPageMatch}
+			currentPageMatch={currentPageMatch}
 		/>
 		<li>
 			<CommunityMenu hideOnLargerScreens={true} />
