--- a/src/components/NavGrid/Card.astro
+++ b/src/components/NavGrid/Card.astro
@@ -16,7 +16,7 @@ const { href, logo, current, minimal, class: classes, ...attrs } = Astro.props a
 	<BrandLogo brand={logo} />
 	<div class="stack">
 		<h3>
-			<a {href} aria-current={current ? 'page' : 'false'}>
+			<a href={href} aria-current={current ? 'page' : 'false'}>
 				<slot name="title" />
 			</a>
 		</h3>
