--- a/src/components/NavGrid/CardsNav.astro
+++ b/src/components/NavGrid/CardsNav.astro
@@ -23,13 +23,11 @@ const currentPage = new URL(Astro.request.url).pathname;
 
 <section class:list={['cards-nav', classes]}>
 	<slot />
-	<Grid {minimal}>
+	<Grid minimal={minimal}>
 		{
 			links.map(({ href, logo, title, tags }) => (
 				<Card
-					{minimal}
-					{logo}
-					{href}
+					{...{ minimal, logo, href }}
 					current={currentPage.includes(href)}
 					class={Object.keys(tags || {}).join(' ')}
 				>
