--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -31,7 +31,7 @@ const defaultLang = fileCaptions.find((caption) => caption.lang == lang) ? lang 
 	{
 		fileCaptions.map(({ lang, path }) => (
 			<track
-				label={languages[lang]}
+				label={languages[lang as keyof typeof languages]}
 				src={path}
 				kind="captions"
 				srclang={lang}
