--- a/src/components/tutorial/TutorialNav.astro
+++ b/src/components/tutorial/TutorialNav.astro
@@ -48,7 +48,7 @@ const isCurrentUnit = (unit: typeof units[number]) =>
 											href={`/${lang}/${lesson.slug}/`}
 											aria-current={currentUrl.endsWith(lesson.slug)}
 										>
-											<Progress path={lesson.url} />
+											<Progress path={lesson.url!} />
 											{index}. {lesson.frontmatter.title}
 										</a>
 									</div>
