--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -128,11 +128,11 @@ if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/
 	</head>
 
 	<body>
-		<Header {currentPage} />
+		<Header currentPage={currentPage} />
 		<main class="layout">
 			<aside id="left-sidebar" class="sidebar">
 				<slot name="primary-sidebar">
-					<LeftSidebar {currentPage} />
+					<LeftSidebar currentPage={currentPage} />
 				</slot>
 			</aside>
 			<aside id="right-sidebar" class="sidebar">
