--- a/src/layouts/DeployGuideLayout.astro
+++ b/src/layouts/DeployGuideLayout.astro
@@ -1,14 +1,14 @@
 ---
 import MainLayout from './MainLayout.astro';
 import DeployGuidesNav from '../components/DeployGuidesNav.astro';
-import BrandLogo from '~/components/BrandLogo.astro';
+import BrandLogo, { Props as LogoProps } from '~/components/BrandLogo.astro';
 
-const brand = Astro.url.pathname.replace(/\/$/, '').split('/').pop();
+const brand = Astro.url.pathname.replace(/\/$/, '').split('/').pop() as LogoProps['brand'];
 ---
 
 <MainLayout {...Astro.props}>
 	<div class="image-wrapper">
-		<BrandLogo {brand} size="9rem" shape={brand === 'deno' ? 'circle' : 'rounded'} />
+		<BrandLogo brand={brand} size="9rem" shape={brand === 'deno' ? 'circle' : 'rounded'} />
 	</div>
 	<slot />
 	<DeployGuidesNav minimal />
