--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -18,7 +18,7 @@ const overview = t('rightSidebar.overview');
 ---
 
 <BaseLayout {...Astro.props}>
-	<RightSidebar slot="secondary-sidebar" {content} {headings} {githubEditUrl} />
+	<RightSidebar slot="secondary-sidebar" {...{content, headings, githubEditUrl}} />
 	<PageContent {...{content, previous, next}}>
 		{
 			headings && (
