--- a/src/pages/[lang]/404.astro
+++ b/src/pages/[lang]/404.astro
@@ -15,5 +15,13 @@ const t = useTranslations(Astro);
 </SplashLayout>
 
 <script>
+	declare global {
+		interface Window {
+			fathom: {
+				trackGoal: (eventId: string, value: number) => void;
+			};
+		}
+	}
+
 	window.addEventListener('load', () => window.fathom.trackGoal('4KN9VI2W', 0));
 </script>
