--- a/src/components/HeadCommon.astro
+++ b/src/components/HeadCommon.astro
@@ -41,8 +41,11 @@ import '@fontsource/ibm-plex-mono/400-italic.css';
 		let range = new Range();
 		range.setStart(node, 0);
 		range.setEnd(node, 1);
-		document.getSelection()?.removeAllRanges();
-		document.getSelection()?.addRange(range);
+		const selection = document.getSelection();
+		if (selection) {
+			selection.removeAllRanges();
+			selection.addRange(range);
+		}
 	});
 </script>
 <!-- Fathom - beautiful, simple website analytics -->
