Parents come in many forms
Co-authored-by: Erika <3019731+Princesseuh@users.noreply.github.com>

--- a/src/components/tabs/TabbedContent.astro
+++ b/src/components/tabs/TabbedContent.astro
@@ -65,7 +65,7 @@ const { tabs } = Astro.props as Props;
 				tab.setAttribute('role', 'tab');
 				tab.setAttribute('id', this.id + 'tab' + this.count++);
 				tab.setAttribute('tabindex', '-1');
-				(tab.parentNode as HTMLElement)?.setAttribute('role', 'presentation');
+				tab.parentElement?.setAttribute('role', 'presentation');
 				if (!this.TabStore[i]) this.TabStore.push(new Set());
 				this.TabStore[i].add(tab);
 				if ('initial' in tab.dataset && tab.dataset.initial !== 'false') initialTab = i;
