ci(check): Add `astro check` step (#2341)
Co-authored-by: Erika <3019731+Princesseuh@users.noreply.github.com>
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/components/HeadCommon.astro
+++ b/src/components/HeadCommon.astro
@@ -33,17 +33,19 @@ import '@fontsource/ibm-plex-mono/400-italic.css';
 <!-- Double-click to highlight code blocks (inline only). -->
 <script>
 	document.addEventListener('dblclick', (el) => {
-		if (el.target.nodeName !== 'CODE') {
-			return;
-		}
-		if (el.target.parentElement.nodeName === 'PRE') {
-			return;
-		}
+		const node = el.target as Node;
+		if (!node) return;
+		if (node.nodeName !== 'CODE') return;
+		if (node.parentElement?.nodeName === 'PRE') return;
+
 		let range = new Range();
-		range.setStart(el.target, 0);
-		range.setEnd(el.target, 1);
-		document.getSelection().removeAllRanges();
-		document.getSelection().addRange(range);
+		range.setStart(node, 0);
+		range.setEnd(node, 1);
+		const selection = document.getSelection();
+		if (selection) {
+			selection.removeAllRanges();
+			selection.addRange(range);
+		}
 	});
 </script>
 <!-- Fathom - beautiful, simple website analytics -->
