--- a/src/pages/[lang]/404.astro
+++ b/src/pages/[lang]/404.astro
@@ -15,5 +15,5 @@ const t = useTranslations(Astro);
 </SplashLayout>
 
 <script>
-	window.addEventListener('load', () => window.fathom.trackGoal('4KN9VI2W', 0));
+	window.addEventListener('load', () => (window as any).fathom.trackGoal('4KN9VI2W', 0));
 </script>
