Add beta tag detection in `<Since>` (#2370)
Co-authored-by: Yan Thomas <61414485+Yan-Thomas@users.noreply.github.com>
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/components/Since.astro
+++ b/src/components/Since.astro
@@ -19,26 +19,27 @@ const parseSemVer = (semver: string) =>
  * Decide a feature is “new” if it was added in the latest minor version.
  * For example, `@version 0.24.0` will be new as long as `astro@latest` is 0.24.x
  */
-const isFeatureNew = async (sinceVersion: string) => {
+const getFeatureStatus = async (sinceVersion: string): Promise<'beta' | 'new' | 'current'> => {
 	const astroInfo = await cachedFetch('https://registry.npmjs.org/astro/latest').then((res) =>
 		res.json()
 	);
 	const latestAstroVersion = astroInfo.version;
 	const [sinceMajor, sinceMinor] = parseSemVer(sinceVersion);
 	const [latestMajor, latestMinor] = parseSemVer(latestAstroVersion);
-	return sinceMajor >= latestMajor && sinceMinor >= latestMinor;
+	if (sinceMajor > latestMajor) {
+		return 'beta';
+	}
+	if (sinceMajor === latestMajor && sinceMinor >= latestMinor) {
+		return 'new';
+	}
+	return 'current';
 };
 
-const isNew = await isFeatureNew(v);
+const featureStatus = await getFeatureStatus(v);
 ---
 
 <span>
 	<strong><UIString key="since.addedIn" /></strong> v{v}
-	{
-		isNew && (
-			<Badge variant="accent">
-				<UIString key="since.new" />
-			</Badge>
-		)
-	}
+	{featureStatus === 'new' && (<Badge variant="accent"><UIString key="since.new" /></Badge>)}
+	{featureStatus === 'beta' && (<Badge variant="accent"><UIString key="since.beta" /></Badge>)}
 </span>
