feat(tsconfig): Use Astro's tsconfig preset

--- a/src/components/CMSGuidesNav.astro
+++ b/src/components/CMSGuidesNav.astro
@@ -1,5 +1,5 @@
 ---
-import { MarkdownInstance } from 'astro';
+import type { MarkdownInstance } from 'astro';
 import { getLanguageFromURL } from '../util';
 import CardsNav from './NavGrid/CardsNav.astro';
 
