--- a/src/components/UIString.astro
+++ b/src/components/UIString.astro
@@ -1,5 +1,5 @@
 ---
-import { UIDictionaryKeys } from '../i18n/translation-checkers';
+import type { UIDictionaryKeys } from '../i18n/translation-checkers';
 import { useTranslations } from '../i18n/util';
 
 export interface Props {
