--- a/src/components/tutorial/TutorialNav.astro
+++ b/src/components/tutorial/TutorialNav.astro
@@ -54,7 +54,8 @@ const isCurrentUnit = (unit: typeof units[number]) =>
 									</div>
 									{currentUrl.endsWith(lesson.slug) && (
 										<ul class="on-this-page">
-											{(await lesson.getHeadings())
+											{lesson
+												.getHeadings()
 												.filter(({ depth }) => depth <= 2)
 												.map((h) => (
 													<li>
