--- a/src/pages/[lang]/[...fallback].astro
+++ b/src/pages/[lang]/[...fallback].astro
@@ -1,5 +1,5 @@
 ---
-import { MarkdownInstance } from 'astro';
+import type { MarkdownInstance } from 'astro';
 import languages from '../../i18n/languages';
 import { groupPagesByLang } from '../../util/groupPagesByLang';
 
