--- a/src/components/Header/Search.astro
+++ b/src/components/Header/Search.astro
@@ -1,6 +1,6 @@
 ---
 import '@docsearch/css/dist/style.css';
-import { DocSearchTranslation } from '../../i18n/translation-checkers';
+import type { DocSearchTranslation } from '../../i18n/translation-checkers';
 import DocSearch from './DocSearch';
 import './HeaderButton.css';
 import './DocSearch.css';
