--- a/src/components/Since.astro
+++ b/src/components/Since.astro
@@ -4,10 +4,11 @@ import Badge from './Badge.astro';
 import { cachedFetch } from '../util-server';
 
 export interface Props {
+	pkg?: string;
 	v: string;
 }
 
-const { v } = Astro.props as Props;
+const { v, pkg = 'astro' } = Astro.props as Props;
 
 /**
  * Split a semantic version string like `0.23.3` into a tuple of `[major, minor, patch]`.
@@ -20,7 +21,7 @@ const parseSemVer = (semver: string) =>
  * For example, `@version 0.24.0` will be new as long as `astro@latest` is 0.24.x
  */
 const getFeatureStatus = async (sinceVersion: string): Promise<'beta' | 'new' | 'current'> => {
-	const astroInfo = await cachedFetch('https://registry.npmjs.org/astro/latest').then((res) =>
+	const astroInfo = await cachedFetch(`https://registry.npmjs.org/${pkg}/latest`).then((res) =>
 		res.json()
 	);
 	const latestAstroVersion = astroInfo.version;
@@ -29,8 +30,9 @@ const getFeatureStatus = async (sinceVersion: string): Promise<'beta' | 'new' | 
 	if (sinceMajor > latestMajor) {
 		return 'beta';
 	}
-	if (sinceMajor === latestMajor && sinceMinor >= latestMinor) {
-		return 'new';
+	if (sinceMajor === latestMajor) {
+		if (sinceMinor > latestMinor) return 'beta';
+		if (sinceMinor === latestMinor) return 'new';
 	}
 	return 'current';
 };
@@ -39,7 +41,8 @@ const featureStatus = await getFeatureStatus(v);
 ---
 
 <span>
-	<strong><UIString key="since.addedIn" /></strong> v{v}
+	<strong><UIString key="since.addedIn" /></strong>
+	<code>{pkg}@{v}</code>
 	{
 		featureStatus === 'new' && (
 			<Badge variant="accent">
