--- a/src/layouts/SplashLayout.astro
+++ b/src/layouts/SplashLayout.astro
@@ -25,6 +25,7 @@ const t = useTranslations(Astro);
 			main {
 				display: grid;
 				place-items: center;
+				padding-top: calc(var(--theme-navbar-height) + var(--doc-padding-block));
 				padding-inline: var(--min-spacing-inline);
 			}
 			:global(#menu-toggle) {
