update to new server format

--- a/src/pages/chat.astro
+++ b/src/pages/chat.astro
@@ -119,9 +119,8 @@ async function postDataAsJson({ url, data }) {
 		 * but for this example we'll just log it to the console.
 		 */
         console.log(responseData);
-        const [answer, sourcesString] = responseData.answer.split(responseData.answer.includes('SOURCES:') ? 'SOURCES:' : 'Source:') as [string, string];
-        const sourcesList = sourcesString.split(sourcesString.includes('\n') ? '\n' : ', ').map((source: string) => `<a href="${source}">${source}</a>`).join('<br/>');
-        chatAnswer.innerText = answer.trim();
+        const sourcesList = responseData.sources.map((source: string) => `<a href="${source.url}">${source.title}</a>`).join('<br/>');
+        chatAnswer.innerText = responseData.answer;
         chatAnswer.innerHTML += '<br/><br/>SOURCES:<br/>' + sourcesList;
 		return responseData;
 
