--- a/src/components/BrandLogo.astro
+++ b/src/components/BrandLogo.astro
@@ -20,6 +20,7 @@ export interface Props {
 		| 'vercel'
 		| 'aws'
 		| 'flightcontrol'
+    | 'sst'
 		| 'image'
 		| 'lit'
 		| 'mdx'
@@ -93,6 +94,7 @@ const logos: Record<Props['brand'], { file: string; padding: string }> = {
 	tailwind: { file: 'tailwind.svg', padding: '.1875em' },
 	vue: { file: 'vue.svg', padding: '.3em .2em .2em' },
 	flightcontrol: { file: 'flightcontrol.svg', padding: '0em 0em 0em' },
+	sst: { file: 'sst.svg', padding: '0em 0.15em 0em' },
 	buttercms: { file: 'buttercms.svg', padding: '.1875em' },
 	builderio: { file: 'builderio.svg', padding: '.25em' },
 	contentful: { file: 'contentful.svg', padding: '.05em' },
