Add Storyblok logo to sponsors

--- a/src/components/LeftSidebar/Sponsors.astro
+++ b/src/components/LeftSidebar/Sponsors.astro
@@ -4,64 +4,63 @@ import UIString from '../UIString.astro';
 
 <div dir="ltr" lang="en" class="sponsors">
 	<h2 class="sponsors-title"><UIString key="leftSidebar.sponsoredBy" /></h2>
-	<div class="sponsor">
-		<a href="https://www.netlify.com/" aria-label="Go to Netlify website">
-			<svg
-				class="sponsor-logo__netlify"
-				viewBox="0 0 147 40"
-				xmlns="http://www.w3.org/2000/svg"
-				xmlns:xlink="http://www.w3.org/1999/xlink"
-				><radialGradient
-					id="netlify-gradient"
-					cx="-779.0521"
-					cy="1839.7205"
-					gradientTransform="matrix(0 38.301 44.1228 0 -81154.2578 29839.2441)"
-					gradientUnits="userSpaceOnUse"
-					r="1.0011"
-					><stop offset="0" stop-color="#20c6b7"></stop><stop offset="1" stop-color="#4d9abf"
-					></stop>
-				</radialGradient><path
-					clip-rule="evenodd"
-					d="m53.37 12.98.12 2.2c1.4-1.7 3.24-2.55 5.53-2.55 3.95 0 5.96 2.27 6.03 6.8v12.57h-4.26v-12.32c0-1.21-.26-2.1-.78-2.68s-1.37-.87-2.55-.87c-1.72 0-3 .78-3.84 2.34v13.53h-4.26v-19.02zm24.38 19.37c-2.7 0-4.89-.85-6.57-2.56-1.68-1.7-2.52-3.98-2.52-6.81v-.53c0-1.9.36-3.59 1.1-5.09.73-1.49 1.76-2.66 3.08-3.49s2.79-1.25 4.42-1.25c2.58 0 4.58.83 5.99 2.48s2.11 3.99 2.11 7.01v1.72h-12.4c.13 1.57.65 2.81 1.57 3.73s2.07 1.37 3.46 1.37c1.95 0 3.54-.79 4.77-2.37l2.3 2.2c-.76 1.14-1.77 2.02-3.04 2.65s-2.69.94-4.27.94zm-.51-16.29c-1.17 0-2.11.41-2.83 1.23s-1.18 1.96-1.38 3.43h8.12v-.32c-.09-1.43-.47-2.51-1.14-3.24-.67-.74-1.59-1.1-2.77-1.1zm16.76-7.7v4.62h3.35v3.16h-3.35v10.62c0 .73.14 1.25.43 1.57s.8.48 1.54.48c.5 0 1-.06 1.49-.18v3.31c-.97.27-1.9.4-2.81.4-3.27 0-4.91-1.81-4.91-5.43v-10.77h-3.12v-3.16h3.12v-4.63zm11.14 23.64h-4.26v-27h4.26zm9.17 0h-4.26v-19.02h4.26zm-4.52-23.96c0-.65.21-1.2.62-1.63.42-.43 1.01-.65 1.78-.65s1.37.22 1.79.65.63.98.63 1.64c0 .64-.21 1.18-.63 1.61s-1.02.64-1.79.64-1.36-.21-1.78-.64c-.41-.44-.62-.98-.62-1.62zm10.66 23.96v-15.86h-2.89v-3.16h2.89v-1.74c0-2.11.58-3.74 1.75-4.89s2.81-1.72 4.91-1.72c.75 0 1.54.11 2.39.32l-.1 3.34c-.54-.1-1.08-.15-1.63-.14-2.04 0-3.05 1.05-3.05 3.15v1.69h3.86v3.16h-3.86v15.85zm17.87-6.12 3.86-12.9h4.54l-7.54 21.9c-1.16 3.2-3.12 4.8-5.89 4.8-.62 0-1.3-.11-2.05-.32v-3.31l.81.05c1.07 0 1.88-.2 2.43-.59.54-.39.97-1.05 1.29-1.98l.61-1.64-6.66-18.93h4.6z"
-					fill-rule="evenodd"></path><path
-					d="m27.89 14.14-.01-.01c-.01 0-.02-.01-.02-.01-.02-.02-.03-.06-.03-.09l.77-4.73 3.62 3.63-3.77 1.6c-.01 0-.02.01-.03.01h-.02s-.01-.01-.02-.02c-.14-.16-.31-.29-.49-.38zm5.26-.29 3.88 3.88c.81.81 1.21 1.21 1.35 1.67.02.07.04.14.05.21l-9.26-3.92s-.01 0-.01-.01c-.04-.02-.08-.03-.08-.07s.04-.06.08-.07l.01-.01zm5.12 7c-.2.38-.59.77-1.25 1.43l-4.37 4.37-5.65-1.18-.03-.01c-.05-.01-.1-.02-.1-.06-.04-.47-.28-.9-.66-1.19-.02-.02-.02-.06-.01-.09v-.01l1.06-6.53v-.02c.01-.05.01-.11.06-.11.46-.06.88-.3 1.16-.67.01-.01.01-.02.03-.03.03-.01.07 0 .1.01zm-6.62 6.8-7.19 7.19 1.23-7.56v-.01c0-.01 0-.02.01-.03.01-.02.04-.03.06-.04h.01c.27-.11.51-.29.69-.52.02-.03.05-.06.09-.06h.03zm-8.71 8.71-.81.81-8.95-12.94s-.01-.01-.01-.01c-.01-.02-.03-.04-.03-.06s.01-.03.02-.04l.01-.01c.03-.04.05-.08.07-.12l.02-.03c.01-.02.03-.05.05-.06s.05-.01.07 0l9.92 2.05c.03 0 .05.02.08.03.01.01.02.03.02.04.14.53.52.97 1.03 1.17.03.01.02.05 0 .08-.01.01-.01.03-.01.05-.12.74-1.19 7.27-1.48 9.04zm-1.69 1.69c-.6.59-.95.9-1.35 1.03-.39.12-.81.12-1.21 0-.47-.15-.87-.55-1.67-1.36l-8.99-8.99 2.35-3.64c.01-.02.02-.03.04-.05s.06-.01.09 0c.54.16 1.12.13 1.64-.08.03-.01.05-.02.07 0l.03.03zm-14.09-10.19-2.06-2.06 4.07-1.74c.01 0 .02-.01.03-.01.03 0 .05.03.07.07.04.06.08.12.13.18l.01.02c.01.02 0 .03-.01.05zm-2.98-2.97-2.61-2.61c-.44-.44-.77-.77-.99-1.04l7.94 1.65h.03c.05.01.1.02.1.06 0 .05-.06.07-.11.09l-.02.01zm-4.05-5c.01-.17.04-.33.09-.5.15-.47.55-.87 1.36-1.67l3.34-3.34c1.54 2.23 3.08 4.46 4.63 6.69.03.04.06.08.03.11-.15.16-.29.34-.4.53-.01.02-.03.05-.05.06-.01.01-.03 0-.04 0zm5.68-6.4 4.49-4.49c.42.19 1.96.83 3.33 1.41 1.04.44 1.99.84 2.29.97.03.01.06.02.07.05.01.02 0 .04 0 .06-.14.66.05 1.35.52 1.83.03.03 0 .07-.03.11l-.01.02-4.56 7.06c-.01.02-.02.04-.04.05s-.06.01-.09 0c-.18-.05-.36-.07-.54-.07-.16 0-.34.03-.52.06-.02 0-.04.01-.05 0-.02-.01-.03-.03-.05-.05zm5.4-5.4 5.81-5.81c.81-.81 1.21-1.21 1.67-1.36.39-.12.81-.12 1.21 0 .47.15.87.55 1.67 1.36l1.26 1.26-4.14 6.4c-.01.02-.02.03-.04.05s-.06.01-.09 0c-.66-.2-1.38-.06-1.92.37-.03.03-.07.01-.1 0-.53-.24-4.73-2.01-5.33-2.27zm12.5-3.67 3.82 3.82-.92 5.7v.02c0 .01 0 .03-.01.04-.01.02-.03.02-.05.03-.2.06-.38.15-.55.27-.01.01-.01.01-.02.02s-.02.02-.04.02c-.01 0-.03 0-.04-.01l-5.82-2.47-.01-.01c-.04-.02-.08-.03-.08-.07-.03-.32-.14-.64-.31-.91-.03-.05-.06-.09-.03-.14zm-3.93 8.6 5.45 2.31c.03.01.06.03.08.06.01.02.01.04 0 .06-.02.08-.03.17-.03.26v.15c0 .04-.04.05-.08.07h-.01c-.86.37-12.13 5.17-12.15 5.17s-.03 0-.05-.02c-.03-.03 0-.07.03-.11 0-.01.01-.01.01-.02l4.48-6.94.01-.01c.03-.04.06-.09.1-.09l.05.01c.1.01.19.03.28.03.68 0 1.31-.33 1.69-.9.01-.02.02-.03.03-.04.04-.01.08 0 .11.01zm-6.25 9.19 12.28-5.24s.02 0 .03.02c.07.07.12.11.18.15l.03.02c.02.01.05.03.05.06v.02l-1.05 6.46v.03c-.01.05-.01.11-.06.11-.57.04-1.08.36-1.37.85v.01c-.01.02-.03.05-.05.06s-.05.01-.07 0l-9.79-2.02c-.02-.02-.16-.53-.18-.53z"
-					fill="url(#netlify-gradient)"></path>
-			</svg>
-		</a>
-	</div>
+	<a href="https://www.netlify.com/" aria-label="Netlify">
+		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 147 40" width="90"
+			><radialGradient
+				id="a"
+				cx="-779.1"
+				cy="1839.7"
+				r="1"
+				gradientTransform="matrix(0 38.3 44.12 0 -81154.3 29839.2)"
+				gradientUnits="userSpaceOnUse"
+				><stop offset="0" stop-color="#20c6b7"></stop><stop offset="1" stop-color="#4d9abf"></stop>
+			</radialGradient><path
+				fill-rule="evenodd"
+				d="M53.4 13v2.2a6.8 6.8 0 0 1 5.6-2.6c4 0 6 2.3 6 6.8V32h-4.2V19.7c0-1.2-.3-2.1-.8-2.7s-1.4-.9-2.5-.9c-1.8 0-3 .8-3.9 2.4V32h-4.2V13zm24.3 19.4c-2.7 0-4.8-.9-6.5-2.6a9.3 9.3 0 0 1-2.5-6.8v-.5c0-2 .3-3.6 1-5.1.8-1.5 1.8-2.7 3.1-3.5s2.8-1.3 4.5-1.3c2.5 0 4.5.9 6 2.5s2 4 2 7v1.7H73c0 1.6.6 2.8 1.5 3.8s2.1 1.3 3.5 1.3a6 6 0 0 0 4.8-2.3l2.3 2.2c-.8 1.1-1.8 2-3 2.6s-2.8 1-4.4 1zM77.3 16c-1.1 0-2 .4-2.8 1.2s-1.2 2-1.4 3.4h8.2v-.3c-.1-1.4-.5-2.5-1.2-3.2a3.5 3.5 0 0 0-2.8-1.1zM94 8.4V13h3.4v3H94v10.7c0 .7.1 1.2.4 1.5s.8.5 1.6.5c.5 0 1 0 1.5-.2V32c-1 .3-2 .4-2.8.4-3.3 0-5-1.8-5-5.4V16.1h-3V13h3V8.4zM105.1 32H101V5h4.2zm9.2 0h-4.2V13h4.2zm-4.5-24c0-.6.2-1.2.6-1.6.4-.4 1-.6 1.8-.6s1.4.2 1.8.6.6 1 .6 1.6c0 .7-.2 1.2-.6 1.7s-1 .6-1.8.6-1.4-.2-1.8-.6c-.4-.5-.6-1-.6-1.7zm10.7 24V16.1h-3V13h3v-1.8c0-2 .5-3.7 1.7-4.8s2.8-1.8 5-1.8a7 7 0 0 1 2.3.4l-.1 3.3c-.5-.1-1-.2-1.6-.1-2 0-3 1-3 3.1V13h3.8v3.2h-3.9V32zm17.8-6.1 3.9-13h4.5l-7.5 22c-1.2 3.2-3.1 4.8-6 4.8l-2-.3V36l.9.1c1 0 1.8-.2 2.4-.6.5-.4 1-1 1.3-2l.6-1.6-6.7-19h4.6z"
+				clip-rule="evenodd"></path><path
+				fill="url(#a)"
+				d="m27.9 14.1.7-4.8 3.6 3.6-3.8 1.6-.5-.4zm5.3-.2 3.8 3.8c.8.8 1.2 1.2 1.4 1.7v.2l-9.2-4H29zm5 7c-.1.3-.5.7-1.2 1.4l-4.4 4.4-5.6-1.2-.1-.1c0-.5-.3-.9-.7-1.2l1-6.6.1-.2c.5 0 .9-.2 1.2-.6h.1zm-6.6 6.8-7.1 7.1 1.2-7.5v-.1l.8-.5zM23 36.4l-.8.8-9-13 .1-.2.1-.1c.1-.1 0 0 0 0l10 2 .1.1c.1.6.5 1 1 1.2v.1l-1.5 9zM21.2 38 20 39a2 2 0 0 1-1.2 0c-.5-.2-.9-.6-1.7-1.4l-9-9 2.4-3.6h.1c.5.1 1.1 0 1.6-.1h.1zm-14-10.2-2.2-2 4-1.7h.1l.2.2zm-3-3-2.6-2.6-1-1 8 1.6v.1zm-4-5v-.5c.2-.5.6-.9 1.4-1.7l3.3-3.3L9.5 21s.1 0 0 0a3 3 0 0 0-.4.7zm5.6-6.4L10.3 9l3.3 1.4 2.3 1c.1 0 0 0 0 0a2 2 0 0 0 .6 2l-4.6 7.1h-.1a2 2 0 0 0-.6 0h-.5zM11.2 8 17 2.3c.8-.8 1.2-1.2 1.7-1.4a2 2 0 0 1 1.2 0c.5.2.9.6 1.7 1.4l1.2 1.2-4.1 6.4h-.1c-.7-.1-1.4 0-2 .5L11.1 8zm12.5-3.7 3.8 3.8-.9 5.7v.1c-.3 0-.4.2-.6.3h-.1L20.1 12l-.1-.1-.3-1zm-4 8.6 5.5 2.3h.1v.8h-.1L13 21.1V21l4.5-7h.4a2 2 0 0 0 1.7-1h.2zm-6.2 9.2L25.8 17l.2.1.1.1-1 6.5-.1.1c-.6 0-1 .4-1.4.9s0 0-.1 0l-9.8-2-.2-.5z"
+			></path>
+		</svg>
+	</a>
+	<a href="https://www.storyblok.com/" aria-label="Storyblok">
+		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 251 53" width="125">
+			<g>
+				<path
+					d="M73 37c-2 0-3.7-.2-5.5-.7-1.6-.6-3.2-1.5-4.5-2.7l2.4-4c1.3 1 2.5 1.6 3.8 2.1 1.2.6 2.4.8 3.6.8a4 4 0 0 0 2-.5c.4-.3.6-.7.6-1.3 0-.5-.2-1-.9-1.4-1-.4-2-.8-3-1L67.7 27a13 13 0 0 1-2.4-1.3c-.6-.4-1.1-1-1.4-1.6a5 5 0 0 1-.4-2c0-2.2.9-4.1 2.5-5.4a9.3 9.3 0 0 1 6.1-2c1.6 0 3.1.2 4.5.6 1.4.5 2.8 1.3 4.1 2.4l-2.6 4c-1-.8-2-1.4-3.2-1.9a7 7 0 0 0-2.8-.6c-.7 0-1.3.1-1.8.5-.5.2-.7.7-.7 1.3 0 .6.2 1 .8 1.4.5.3 1.5.6 3 1l3.8 1.2L80 26c1.3 1 2 2.5 1.8 4.1a6 6 0 0 1-2.4 5.1 10 10 0 0 1-6.4 1.9Zm25.8-1.4-3 1c-1.2.3-2.4.5-3.6.5-.8 0-1.6 0-2.3-.3a4.3 4.3 0 0 1-3.2-2.7c-.3-.8-.5-1.7-.5-2.7V20h-2.7v-4.9h2.7V8.3h6.5v6.8h4.4v5h-4.4v9c0 .7.2 1.2.6 1.6.3.3.8.4 1.3.4s1 0 1.5-.2l1.4-.6 1.2 5.3ZM111 37c-1.6 0-3.3-.3-4.8-.9a10 10 0 0 1-5.9-6 12 12 0 0 1 0-8.5c1-2.8 3.1-5 5.9-6 1.4-.6 3-1 4.8-1a11 11 0 0 1 10.7 7c1.1 2.7 1.1 5.8 0 8.5-1 2.7-3 5-5.8 6-1.5.6-3.2 1-4.9.9Zm-4.7-11c0 1.7.4 3 1.3 4 1 1 2.1 1.6 3.5 1.6 1.3 0 2.5-.6 3.4-1.6a6.4 6.4 0 0 0 1.4-4 6 6 0 0 0-1.4-4.1c-1-1-2-1.6-3.4-1.6-1.3 0-2.6.6-3.4 1.6a6 6 0 0 0-1 1.8c-.3.7-.4 1.5-.4 2.3Zm33.1-5.2c-1.5 0-3 .3-4.3.8a5.2 5.2 0 0 0-2.8 2.2v13h-6.5V15.1h6v4.3a8.4 8.4 0 0 1 2.9-3.4 6.5 6.5 0 0 1 3.6-1.3h1.1v6Zm2.9 19.1c1 .3 1.9.5 2.8.5.8 0 1.4-.2 1.9-.7a9 9 0 0 0 1.2-3L140 15.2h6.7l5 15.9 4.3-15.9h6.2l-8.2 25a8.5 8.5 0 0 1-11.7 5.3V40Zm35.3-2.8a8.1 8.1 0 0 1-7.2-4v3.6h-5.7v-30h6.6v12a8 8 0 0 1 10.8-3c1.1.5 2 1.3 3 2.3a14 14 0 0 1 1.8 12.4c-.5 1.3-1.2 2.6-2 3.5a9.6 9.6 0 0 1-7.3 3.2Zm-1.8-5.5a5 5 0 0 0 4.7-3.4c.8-2 .4-4.4-1-6.2-.8-1-2-1.7-3.4-1.7-1 0-2 .4-2.8 1-.9.8-1.6 1.7-2 2.8v4.5a5 5 0 0 0 4.6 3Zm15-24.8h6.6V29c0 1.7.7 2.5 2.1 2.5a5 5 0 0 0 2.1-.5l1 4.8a15 15 0 0 1-5.9 1.3c-1.9 0-3.3-.5-4.3-1.5s-1.6-2.4-1.6-4.3V6.8Zm24 30.3c-1.6 0-3.2-.3-4.8-.9-2.7-1-4.9-3.3-5.9-6a12 12 0 0 1 2.2-12 11.3 11.3 0 0 1 8.5-3.4 11 11 0 0 1 10.7 6.9c1.6 4.1.8 8.7-2.2 12a10 10 0 0 1-3.6 2.5c-1.6.6-3.2 1-4.9.9ZM210.2 26c0 1.7.4 3 1.3 4 1 1 2.1 1.6 3.5 1.6 1.3 0 2.5-.6 3.4-1.6a6.4 6.4 0 0 0 1.4-4 6 6 0 0 0-1.4-4.1c-1-1-2-1.6-3.4-1.6-1.3 0-2.6.6-3.4 1.6a6 6 0 0 0-1 1.8c-.3.7-.4 1.4-.4 2.3Zm34 10.7-5.6-8.7-2.3 2.4v6.3h-6.6v-30h6.6v17.4l7.2-8.9h7l-7.8 9.3 8.4 12.2h-7Z"
+				></path>
+				<path
+					fill="#0AB3AF"
+					d="M2.3 0C1 0 0 1 0 2.3v40.6c0 1.2 1 2 2.3 2h6V53l7.4-8H43c1.3 0 2-.8 2-2.1V2.3c0-1.2-.7-2.3-2-2.3H2.3Z"
+				></path>
+				<path
+					fill="#FFF"
+					d="M29.1 8.1c1 0 2 .2 2.7.7.8.4 1.5 1 2.1 1.6a7.7 7.7 0 0 1 1.8 5 8 8 0 0 1-1 4 6.5 6.5 0 0 1-3.2 2.7c1.7.5 3 1.3 4 2.5a7.8 7.8 0 0 1 1.4 4.8 6.2 6.2 0 0 1-3 5.6c-1 .6-2 1.2-3.3 1.5-1.2.3-2.6.5-4 .5H8.3V8.1h20.8Zm-3 16.2H15.8v4.9h10c.7 0 1.2-.3 1.7-.7.4-.4.6-1 .6-1.7 0-.6-.2-1.2-.5-1.7-.4-.5-.9-.8-1.5-.8Zm-.8-9.8h-9.5V19H25c.5 0 1-.2 1.4-.5.4-.3.6-1 .6-1.8 0-.7-.2-1.3-.5-1.6a2 2 0 0 0-1.3-.5Z"
+				></path>
+			</g>
+		</svg>
+	</a>
 </div>
 
 <style>
 	.sponsors {
-		opacity: 0.75;
 		display: flex;
+		flex-direction: column;
 		align-items: center;
-		justify-content: center;
-		gap: 0.5rem;
-		padding: 2rem 0;
-		cursor: default;
+		gap: 1.25rem;
+		padding: 3rem 0;
 	}
-	.sponsors:hover {
+	a {
+		opacity: 0.75;
+	}
+	a:hover {
 		opacity: 1;
-	}
-	.sponsor {
-		margin-bottom: -0.375rem;
 	}
 	svg {
 		color: var(--theme-text);
 		fill: currentColor;
 	}
 
-	.sponsor-logo__netlify {
-		width: 90px;
-	}
-
-	.sponsor-logo__vercel {
-		width: 90px;
-	}
-	:global(:root.theme-dark .sponsors-title) {
-		color: hsl(var(--color-base-gray), 75%);
-	}
 	.sponsors-title {
 		color: hsl(var(--color-base-gray), 25%);
 		font-size: 0.8em;
@@ -69,5 +68,8 @@ import UIString from '../UIString.astro';
 		letter-spacing: 0.0625em;
 		margin: 0 0;
 		text-transform: uppercase;
+	}
+	:global(:root.theme-dark) .sponsors-title {
+		color: hsl(var(--color-base-gray), 75%);
 	}
 </style>
