Export `Props` typings

--- a/src/layouts/IntegrationLayout.astro
+++ b/src/layouts/IntegrationLayout.astro
@@ -5,9 +5,9 @@ import MainLayout from './MainLayout.astro';
 import Version from '../components/Version.astro';
 import type { IntegrationEntry } from '~/content/config';
 
-type Props = {
+export interface Props {
 	content: IntegrationEntry['data'];
-};
+}
 
 const { title, githubURL } = Astro.props.content;
 ---
