--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -9,9 +9,9 @@ import { getGithubEditUrl } from '../util/getGithubEditUrl';
 import { getNavLinks } from '../util/getNavLinks';
 import BaseLayout from './BaseLayout.astro';
 
-type Props = {
+export interface Props {
 	content: CollectionEntry<'docs'>['data'];
-};
+}
 
 const { content } = Astro.props;
 // TODO: Remove use of `content.astro.headings`
