--- a/src/layouts/MigrationLayout.astro
+++ b/src/layouts/MigrationLayout.astro
@@ -6,9 +6,9 @@ import type { MigrationEntry } from '~/content/config';
 import { getGithubEditUrl } from '~/util/getGithubEditUrl';
 import MainLayout from './MainLayout.astro';
 
-type Props = {
+export interface Props {
 	content: MigrationEntry['data'];
-};
+}
 
 const githubEditUrl = getGithubEditUrl(Astro);
 const {
