--- a/src/layouts/TutorialLayout.astro
+++ b/src/layouts/TutorialLayout.astro
@@ -9,9 +9,9 @@ import { getTutorialPages, getTutorialUnits } from '../util/getTutorialPages';
 import BaseLayout from './BaseLayout.astro';
 import { isTutorialEntry, TutorialEntry } from '~/content/config';
 
-type Props = {
+export interface Props {
 	content: TutorialEntry['data'];
-};
+}
 
 const currentUrl = Astro.url.pathname.replace(/\/$/, '');
 const lang = getLanguageFromURL(Astro.url.pathname);
