--- a/src/pages/[lang]/[...slug].astro
+++ b/src/pages/[lang]/[...slug].astro
@@ -37,7 +37,7 @@ export async function getStaticPaths() {
 	return routes.concat(fallbacks);
 }
 
-type Props = CollectionEntry<'docs'>;
+export type Props = CollectionEntry<'docs'>;
 
 const { data, render } = Astro.props;
 const { Content } = await render();
