--- a/src/layouts/DeployGuideLayout.astro
+++ b/src/layouts/DeployGuideLayout.astro
@@ -4,9 +4,9 @@ import DeployGuidesNav from '../components/DeployGuidesNav.astro';
 import BrandLogo, { Props as LogoProps } from '~/components/BrandLogo.astro';
 import type { DeployEntry } from '~/content/config';
 
-type Props = {
+export interface Props {
 	content: DeployEntry['data'];
-};
+}
 
 const brand = Astro.url.pathname.replace(/\/$/, '').split('/').pop() as LogoProps['brand'];
 ---
