Fix use of content headings

--- a/src/layouts/CMSLayout.astro
+++ b/src/layouts/CMSLayout.astro
@@ -1,4 +1,5 @@
 ---
+import type { MarkdownHeading } from 'astro';
 import Aside from '~/components/Aside.astro';
 import CMSGuidesNav from '~/components/CMSGuidesNav.astro';
 import UIString from '~/components/UIString.astro';
@@ -8,6 +9,7 @@ import MainLayout from './MainLayout.astro';
 
 export interface Props {
 	content: CmsEntry['data'];
+	headings: MarkdownHeading[];
 }
 
 const githubEditUrl = getGithubEditUrl(Astro);
