--- a/src/layouts/DeployGuideLayout.astro
+++ b/src/layouts/DeployGuideLayout.astro
@@ -1,4 +1,5 @@
 ---
+import type { MarkdownHeading } from 'astro';
 import MainLayout from './MainLayout.astro';
 import DeployGuidesNav from '../components/DeployGuidesNav.astro';
 import BrandLogo, { Props as LogoProps } from '~/components/BrandLogo.astro';
@@ -6,6 +7,7 @@ import type { DeployEntry } from '~/content/config';
 
 export interface Props {
 	content: DeployEntry['data'];
+	headings: MarkdownHeading[];
 }
 
 const brand = Astro.url.pathname.replace(/\/$/, '').split('/').pop() as LogoProps['brand'];
