--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,4 +1,5 @@
 ---
+import type { MarkdownHeading } from 'astro';
 import type { CollectionEntry } from 'astro:content';
 import generateToc from '~/util/generateToc';
 import PageContent from '../components/PageContent/PageContent.astro';
@@ -11,11 +12,10 @@ import BaseLayout from './BaseLayout.astro';
 
 export interface Props {
 	content: CollectionEntry<'docs'>['data'];
+	headings: MarkdownHeading[];
 }
 
-const { content } = Astro.props;
-// TODO: Remove use of `content.astro.headings`
-const headings = Astro.props.headings ?? content.astro?.headings;
+const { content, headings } = Astro.props;
 const t = useTranslations(Astro);
 const { previous, next } = await getNavLinks(Astro);
 const githubEditUrl = getGithubEditUrl(Astro);
