--- a/src/layouts/MigrationLayout.astro
+++ b/src/layouts/MigrationLayout.astro
@@ -1,4 +1,5 @@
 ---
+import type { MarkdownHeading } from 'astro';
 import Aside from '~/components/Aside.astro';
 import MigrationGuidesNav from '~/components/MigrationGuidesNav.astro';
 import UIString from '~/components/UIString.astro';
@@ -8,6 +9,7 @@ import MainLayout from './MainLayout.astro';
 
 export interface Props {
 	content: MigrationEntry['data'];
+	headings: MarkdownHeading[];
 }
 
 const githubEditUrl = getGithubEditUrl(Astro);
