--- a/src/pages/[lang]/[...slug].astro
+++ b/src/pages/[lang]/[...slug].astro
@@ -40,16 +40,16 @@ export async function getStaticPaths() {
 export type Props = CollectionEntry<'docs'>;
 
 const { data, render } = Astro.props;
-const { Content } = await render();
+const { Content, headings } = await render();
 ---
 
 {
 	data.type === 'cms' ? (
-		<CMSLayout content={data}>
+		<CMSLayout content={data} headings={headings}>
 			<Content />
 		</CMSLayout>
 	) : data.type === 'integration' ? (
-		<IntegrationLayout content={data}>
+		<IntegrationLayout content={data} headings={headings}>
 			<Content />
 		</IntegrationLayout>
 	) : data.type === 'tutorial' ? (
@@ -57,15 +57,15 @@ const { Content } = await render();
 			<Content />
 		</TutorialLayout>
 	) : data.type === 'migration' ? (
-		<MigrationLayout content={data}>
+		<MigrationLayout content={data} headings={headings}>
 			<Content />
 		</MigrationLayout>
 	) : data.type === 'deploy' ? (
-		<DeployGuideLayout content={data}>
+		<DeployGuideLayout content={data} headings={headings}>
 			<Content />
 		</DeployGuideLayout>
 	) : (
-		<MainLayout content={data}>
+		<MainLayout content={data} headings={headings}>
 			<Content />
 		</MainLayout>
 	)
