--- a/src/layouts/IntegrationLayout.astro
+++ b/src/layouts/IntegrationLayout.astro
@@ -4,9 +4,11 @@ import UIString from '../components/UIString.astro';
 import MainLayout from './MainLayout.astro';
 import Version from '../components/Version.astro';
 import type { IntegrationEntry } from '~/content/config';
+import type { MarkdownHeading } from 'astro';
 
 export interface Props {
 	content: IntegrationEntry['data'];
+	headings: MarkdownHeading[];
 }
 
 const { title, githubURL } = Astro.props.content;
