add crystallize page

--- a/src/components/BrandLogo.astro
+++ b/src/components/BrandLogo.astro
@@ -38,6 +38,7 @@ export interface Props {
 		| 'builderio'
 		| 'buttercms'
 		| 'contentful'
+		| 'crystallize'
 		| 'directus'
 		| 'ghost'
 		| 'netlify-cms'
@@ -68,6 +69,7 @@ const logos: Record<Props['brand'], { file: string; padding: string }> = {
 	buddy: { file: 'buddy.svg', padding: '.1625em' },
 	cleavr: { file: 'cleavr.svg', padding: '0.125em 0.125em 0.1375em' },
 	cloudflare: { file: 'cloudflare-pages.svg', padding: '.1875em' },
+	crystallize: { file: 'crystallize.svg', padding: '.1875em' },
 	deno: { file: 'deno.svg', padding: '0' },
 	edgio: { file: 'edgio.svg', padding: '.1625em' },
 	github: { file: 'github.svg', padding: '0.125em 0.125em 0.1375em' },
