Make sure all layouts have `Props` typed

--- a/src/components/HeadSEO.astro
+++ b/src/components/HeadSEO.astro
@@ -1,4 +1,5 @@
 ---
+import type { CollectionEntry } from 'astro:content';
 import { OPEN_GRAPH } from '../config';
 import { normalizeLangTag } from '../i18n/bcp-normalize';
 import languages from '../i18n/languages';
@@ -7,16 +8,16 @@ import { getLanguageFromURL } from '../util';
 import { getOgImageUrl } from '../util/getOgImageUrl';
 
 export interface Props {
-	content: any;
+	content: CollectionEntry<'docs'>['data'];
 	canonicalURL: URL;
 }
 
-const { content = {}, canonicalURL } = Astro.props;
+const { content, canonicalURL } = Astro.props;
 const t = useTranslations(Astro);
 const ogImageUrl = getOgImageUrl(canonicalURL.pathname, !!Astro.params.fallback);
-const imageSrc = content?.image?.src ?? ogImageUrl ?? t('site.og.imageSrc');
+const imageSrc = ogImageUrl ?? t('site.og.imageSrc');
 const canonicalImageSrc = new URL(imageSrc, Astro.site);
-const imageAlt = content?.image?.alt ?? imageSrc === ogImageUrl ? '' : t('site.og.imageAlt');
+const imageAlt = imageSrc === ogImageUrl ? '' : t('site.og.imageAlt');
 const lang = getLanguageFromURL(canonicalURL?.pathname || '/');
 const bcpLang = normalizeLangTag(lang);
 const ogLocale = bcpLang.replace(/-/g, '_');
