--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import type { CollectionEntry } from 'astro:content';
 import Footer from '../components/Footer/Footer.astro';
 import HeadCommon from '../components/HeadCommon.astro';
 import Header from '../components/Header/Header.astro';
@@ -10,7 +11,11 @@ import { useTranslations } from '../i18n/util';
 import { getLanguageFromURL } from '../util';
 import { getPageCategory } from '../util/getPageCategory';
 
-const { content = {} } = Astro.props;
+export interface Props {
+	content: CollectionEntry<'docs'>['data'];
+}
+
+const { content } = Astro.props;
 const isFallback = !!Astro.params.fallback;
 const url = Astro.url;
 const lang = getLanguageFromURL(url.pathname);
@@ -28,7 +33,7 @@ if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/
 <html dir={direction} lang={bcpLang} class="initial">
 	<head>
 		<HeadCommon />
-		<HeadSEO {content} {canonicalURL} />
+		<HeadSEO content={content} canonicalURL={canonicalURL} />
 		<title set:html={formatTitle(content)} />
 		<style>
 			.sidebar {
