--- a/src/layouts/SplashLayout.astro
+++ b/src/layouts/SplashLayout.astro
@@ -6,13 +6,18 @@ import { getLanguageFromURL } from '../util';
 import { normalizeLangTag } from '../i18n/bcp-normalize';
 import { useTranslations } from '../i18n/util';
 
+export interface Props {
+	title: string;
+	dir?: 'ltr' | 'rtl';
+}
+
 const { title, dir = 'ltr' } = Astro.props;
 const lang = getLanguageFromURL(new URL(Astro.request.url).pathname);
 const bcpLang = normalizeLangTag(lang);
 const t = useTranslations(Astro);
 ---
 
-<html {dir} lang={bcpLang} class="initial">
+<html dir={dir} lang={bcpLang} class="initial">
 	<head>
 		<HeadCommon />
 		<title>{`${title} 🚀 ${t('site.title')}`}</title>
