--- a/src/components/FallbackNotice.astro
+++ b/src/components/FallbackNotice.astro
@@ -4,7 +4,7 @@ import UIString from './UIString.astro';
 ---
 
 <Aside>
-	<UIString key="fallbackContent.notice" />
+	<UIString key="fallbackContent.notice" />{' '}
 	<a href="https://github.com/withastro/docs/blob/main/TRANSLATING.md"
 		><UIString key="fallbackContent.linkText" />
 	</a>
