--- a/src/components/CMSGuidesNav.astro
+++ b/src/components/CMSGuidesNav.astro
@@ -2,17 +2,20 @@
 import { getLanguageFromURL } from '../util';
 import CardsNav from './NavGrid/CardsNav.astro';
 import { getCollection } from 'astro:content';
-import { isCmsEntry } from '~/content/config';
+import { isCmsEntry, CmsEntry } from '~/content/config';
 
 const lang = getLanguageFromURL(Astro.url.pathname);
-const pages = await getCollection('docs', isCmsEntry);
+const enPages = await getCollection(
+	'docs',
+	(entry): entry is CmsEntry => isCmsEntry(entry) && entry.slug.startsWith('en/')
+);
 
 /** Array of services we have good content for and want to show first in the list. */
 const showFirst = ['Storyblok', 'Contentful', 'ButterCMS'];
 // Reverse the array to make our logic simpler later.
 showFirst.reverse();
 
-const links = pages
+const links = enPages
 	.sort((a, b) => {
 		// Sort services in the `showFirst` array first.
 		const aPriority = showFirst.indexOf(a.data.service);
@@ -29,7 +32,7 @@ const links = pages
 		const pageUrl = page.slug.replace('en/', `${lang}/`) + '/';
 		// TODO: convert logo type def to a Zod enum
 		const logo = page.slug.split('/').pop() as any;
-		return { title: service, href: pageUrl, logo };
+		return { title: service, href: '/' + pageUrl, logo };
 	});
 ---
 
