--- a/src/components/CMSGuidesNav.astro
+++ b/src/components/CMSGuidesNav.astro
@@ -29,10 +29,10 @@ const links = enPages
 	})
 	.map((page) => {
 		const { service } = page.data;
-		const pageUrl = page.slug.replace('en/', `${lang}/`) + '/';
+		const pageUrl = '/' + page.slug.replace('en/', `${lang}/`) + '/';
 		// TODO: convert logo type def to a Zod enum
 		const logo = page.slug.split('/').pop() as any;
-		return { title: service, href: '/' + pageUrl, logo };
+		return { title: service, href: pageUrl, logo };
 	});
 ---
 
