refactor: Move en slug check to utility

--- a/src/components/CMSGuidesNav.astro
+++ b/src/components/CMSGuidesNav.astro
@@ -2,12 +2,12 @@
 import { getLanguageFromURL } from '../util';
 import CardsNav from './NavGrid/CardsNav.astro';
 import { getCollection } from 'astro:content';
-import { isCmsEntry, CmsEntry } from '~/content/config';
+import { isCmsEntry, CmsEntry, isEnglishEntry } from '~/content/config';
 
 const lang = getLanguageFromURL(Astro.url.pathname);
 const enPages = await getCollection(
 	'docs',
-	(entry): entry is CmsEntry => isCmsEntry(entry) && entry.slug.startsWith('en/')
+	(entry): entry is CmsEntry => isCmsEntry(entry) && isEnglishEntry(entry)
 );
 
 /** Array of services we have good content for and want to show first in the list. */
