--- a/src/components/IntegrationsNav.astro
+++ b/src/components/IntegrationsNav.astro
@@ -3,7 +3,12 @@ import { getLanguageFromURL } from '../util';
 import { useTranslations } from '../i18n/util';
 import CardsNav from './NavGrid/CardsNav.astro';
 import { getCollection } from 'astro:content';
-import { IntegrationCategory, IntegrationEntry, isIntegrationEntry } from '~/content/config';
+import {
+	IntegrationCategory,
+	IntegrationEntry,
+	isEnglishEntry,
+	isIntegrationEntry,
+} from '~/content/config';
 
 const lang = getLanguageFromURL(Astro.url.pathname);
 
@@ -27,18 +32,15 @@ function categoryLinksFromPages(pages: IntegrationEntry[], category: Integration
 
 const t = useTranslations(Astro);
 
-const pages = await getCollection('docs', isIntegrationEntry);
+const enPages = await getCollection(
+	'docs',
+	(entry): entry is IntegrationEntry => isIntegrationEntry(entry) && isEnglishEntry(entry)
+);
 
 const categories = [
-	{
-		title: t('integrations.renderers'),
-		links: categoryLinksFromPages(pages, 'renderer'),
-	},
-	{
-		title: t('integrations.adapters'),
-		links: categoryLinksFromPages(pages, 'adapter'),
-	},
-	{ title: t('integrations.others'), links: categoryLinksFromPages(pages, 'other') },
+	{ title: t('integrations.renderers'), links: categoryLinksFromPages(enPages, 'renderer') },
+	{ title: t('integrations.adapters'), links: categoryLinksFromPages(enPages, 'adapter') },
+	{ title: t('integrations.others'), links: categoryLinksFromPages(enPages, 'other') },
 ];
 ---
 
