Only use English pages to generate `<MigrationGuidesNav>`

--- a/src/components/MigrationGuidesNav.astro
+++ b/src/components/MigrationGuidesNav.astro
@@ -1,19 +1,22 @@
 ---
 import { getCollection } from 'astro:content';
-import { isMigrationEntry } from '~/content/config';
+import { isEnglishEntry, isMigrationEntry, MigrationEntry } from '~/content/config';
 import { getLanguageFromURL } from '../util';
 import CardsNav from './NavGrid/CardsNav.astro';
 
 const lang = getLanguageFromURL(Astro.url.pathname);
 
-const pages = await getCollection('docs', isMigrationEntry);
+const enPages = await getCollection(
+	'docs',
+	(entry): entry is MigrationEntry => isMigrationEntry(entry) && isEnglishEntry(entry)
+);
 
 /** Array of frameworks we have good content for and want to show first in the list. */
 const showFirst: string[] = [];
 // Reverse the array to make our logic simpler later.
 showFirst.reverse();
 
-const links = pages
+const links = enPages
 	.sort((a, b) => {
 		// Sort frameworks in the `showFirst` array first.
 		const aPriority = showFirst.indexOf(a.data.framework);
