Fix Tutorial Tracker

--- a/src/components/tutorial/TutorialNav.astro
+++ b/src/components/tutorial/TutorialNav.astro
@@ -31,7 +31,7 @@ const isCurrentUnit = (unit: typeof units[number]) =>
 			{
 				units.map((unit, idx) => (
 					<TabListItem id={makeUnitId(idx)} initial={isCurrentUnit(unit)}>
-						<UnitProgressIcon unitNumber={idx} paths={unit.lessons.map((l) => l.slug)} />
+						<UnitProgressIcon unitNumber={idx} paths={unit.lessons.map((l) => '/' + l.slug)} />
 					</TabListItem>
 				))
 			}
@@ -53,7 +53,7 @@ const isCurrentUnit = (unit: typeof units[number]) =>
 												href={`/${lang}/${slugWithoutLang}/`}
 												aria-current={currentUrl.endsWith(slugWithoutLang)}
 											>
-												<Progress path={lesson.slug} />
+												<Progress path={'/' + lesson.slug} />
 												{index}. {lesson.data.title}
 											</a>
 										</div>
