Fix `<TutorialLayout>` slug matching

--- a/src/layouts/TutorialLayout.astro
+++ b/src/layouts/TutorialLayout.astro
@@ -20,7 +20,7 @@ const pages = await getCollection('docs', isTutorialEntry);
 const tutorialPages = getTutorialPages(pages, lang);
 const units = getTutorialUnits(tutorialPages);
 const currentUnitIndex = units.findIndex((unit) =>
-	unit.lessons.some((lesson) => currentUrl.endsWith(lesson.slug))
+	unit.lessons.some((lesson) => currentUrl.endsWith(splitSlugFromLang(lesson.slug).slug))
 );
 const currentUnit = units[currentUnitIndex];
 
