Refactor `stripLangFromSlug` for cleaner use

--- a/src/layouts/TutorialLayout.astro
+++ b/src/layouts/TutorialLayout.astro
@@ -3,7 +3,7 @@ import { getCollection } from 'astro:content';
 import PageContent from '../components/PageContent/PageContent.astro';
 import MobileTutorialNav from '../components/tutorial/MobileTutorialNav.astro';
 import RightSidebar from '../components/tutorial/RightSidebar.astro';
-import { getLanguageFromURL, splitSlugFromLang } from '../util';
+import { getLanguageFromURL, stripLangFromSlug } from '../util';
 import { getPreviousAndNext } from '../util/getNavLinks';
 import { getTutorialPages, getTutorialUnits } from '../util/getTutorialPages';
 import BaseLayout from './BaseLayout.astro';
@@ -20,12 +20,12 @@ const pages = await getCollection('docs', isTutorialEntry);
 const tutorialPages = getTutorialPages(pages, lang);
 const units = getTutorialUnits(tutorialPages);
 const currentUnitIndex = units.findIndex((unit) =>
-	unit.lessons.some((lesson) => currentUrl.endsWith(splitSlugFromLang(lesson.slug).slug))
+	unit.lessons.some((lesson) => currentUrl.endsWith(stripLangFromSlug(lesson.slug)))
 );
 const currentUnit = units[currentUnitIndex];
 
 const { next } = getPreviousAndNext(
-	tutorialPages.map((page) => ({ text: page.data.title, slug: splitSlugFromLang(page.slug).slug })),
+	tutorialPages.map((page) => ({ text: page.data.title, slug: stripLangFromSlug(page.slug) })),
 	Astro
 );
 ---
