--- a/src/pages/[...enRedirectSlug].astro
+++ b/src/pages/[...enRedirectSlug].astro
@@ -1,7 +1,7 @@
 ---
 // Redirect from base to /en/ pages
 import { getCollection } from 'astro:content';
-import { splitSlugFromLang } from '~/util';
+import { stripLangFromSlug } from '~/util';
 
 export async function getStaticPaths() {
 	// get english pages that moved from `/` to `/en/`
@@ -10,7 +10,7 @@ export async function getStaticPaths() {
 	return englishPages.map((page) => {
 		return {
 			params: {
-				enRedirectSlug: splitSlugFromLang(page.slug).slug,
+				enRedirectSlug: stripLangFromSlug(page.slug),
 			},
 			props: {
 				englishSlug: page.slug,
