--- a/src/pages/[lang]/[...fallback].astro
+++ b/src/pages/[lang]/[...fallback].astro
@@ -1,7 +1,7 @@
 ---
 import { CollectionEntry, getCollection } from 'astro:content';
 import LayoutSwitcher from '~/layouts/LayoutSwitcher.astro';
-import { splitSlugFromLang } from '~/util';
+import { stripLangFromSlug } from '~/util';
 import languages from '../../i18n/languages';
 import { groupPagesByLang } from '../../util/groupPagesByLang';
 
@@ -19,7 +19,7 @@ export async function getStaticPaths() {
 		if (lang === 'en') continue;
 
 		for (const englishPage of pagesByLang.en) {
-			const slugWithoutLang = splitSlugFromLang(englishPage.slug).slug;
+			const slugWithoutLang = stripLangFromSlug(englishPage.slug);
 			const doesNotNeedFallback = pagesByLang[lang]?.some((p) => p.slug.endsWith(slugWithoutLang));
 			if (doesNotNeedFallback) continue;
 			fallbacks.push({ params: { lang, fallback: slugWithoutLang }, props: englishPage });
