--- a/src/pages/[lang]/[...slug].astro
+++ b/src/pages/[lang]/[...slug].astro
@@ -1,13 +1,14 @@
 ---
 import { CollectionEntry, getCollection } from 'astro:content';
 import LayoutSwitcher from '~/layouts/LayoutSwitcher.astro';
-import { splitSlugFromLang } from '~/util';
+import { stripLangFromSlug, getLangFromSlug } from '~/util';
 
 export async function getStaticPaths() {
 	const allPages = await getCollection('docs');
 
 	return allPages.map((page) => {
-		const { lang, slug } = splitSlugFromLang(page.slug);
+		const lang = getLangFromSlug(page.slug);
+		const slug = stripLangFromSlug(page.slug);
 		return { params: { lang, slug }, props: page };
 	});
 }
