Fix redirect route

--- a/src/pages/[...enRedirectSlug].astro
+++ b/src/pages/[...enRedirectSlug].astro
@@ -20,4 +20,4 @@ export async function getStaticPaths() {
 }
 ---
 
-<meta http-equiv="refresh" content={`0;url=${Astro.props.englishSlug}`} />
+<meta http-equiv="refresh" content={`0;url=/${Astro.props.englishSlug}`} />
