--- a/src/components/BrandLogo.astro
+++ b/src/components/BrandLogo.astro
@@ -59,7 +59,8 @@ export interface Props {
 		| 'vuepress'
 		| 'docusaurus'
 		| 'nuxtjs'
-		| 'keystonejs';
+		| 'keystonejs'
+		| 'appwriteio';
 }
 
 const logos: Record<Props['brand'], { file: string; padding: string }> = {
@@ -120,6 +121,7 @@ const logos: Record<Props['brand'], { file: string; padding: string }> = {
 	docusaurus: { file: 'docusaurus.svg', padding: '.225em' },
 	nuxtjs: { file: 'nuxtjs.svg', padding: '.25em' },
 	keystonejs: { file: 'keystonejs.svg', padding: '.25em' },
+	appwriteio: { file: 'appwriteio.svg', padding: '.125em' },
 };
 
 const { brand, size = '4rem', shape = 'circle' } = Astro.props as Props;
