--- a/src/components/BrandLogo.astro
+++ b/src/components/BrandLogo.astro
@@ -60,7 +60,8 @@ export interface Props {
 		| 'docusaurus'
 		| 'nuxtjs'
 		| 'keystonejs'
-		| 'appwriteio';
+		| 'appwriteio'
+		| 'supabase';
 }
 
 const logos: Record<Props['brand'], { file: string; padding: string }> = {
@@ -122,6 +123,7 @@ const logos: Record<Props['brand'], { file: string; padding: string }> = {
 	nuxtjs: { file: 'nuxtjs.svg', padding: '.25em' },
 	keystonejs: { file: 'keystonejs.svg', padding: '.25em' },
 	appwriteio: { file: 'appwriteio.svg', padding: '.125em' },
+	supabase: { file: 'supabase.svg', padding: '.125em' },
 };
 
 const { brand, size = '4rem', shape = 'circle' } = Astro.props as Props;
